<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="search">Search</string>
    <string name="night_mode">Night Mode</string>
    <string name="app_name">Android Central</string>
    <string name="refresh">Refresh</string>
    <string name="hero_image">Hero Image</string>
    <string name="sync_interval">Sync Interval</string>
    <string name="forums_signature">Forum Signature</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="copy_url">Copy URL</string>
    <string name="font_size">Font Size</string>
    <string name="avatar">Avatar</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="new_comment">New Comment</string>
    <string name="new_thread">New Thread</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="welcome">Welcome to Android Central</string>
    <string name="enter_comment_hint">Enter your comment</string>
    <string name="enter_reply_hint">Enter your reply</string>
    <string name="reason_hint">Reason (optional)</string>
    <string name="submit">Submit</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="conn_err">Connection error. Please try again</string>
    <string name="go_to_page">Go to Page...</string>
    <string name="first">First</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="last">Last</string>
    <string name="enter_thread_title_hint">Enter a title</string>
    <string name="enter_post_hint">Enter your post</string>
    <string name="select_action">Select an action...</string>
    <string name="pause">Pause</string>
    <string name="play">Play/Stream</string>
    <string name="play_start">Starting playback...</string>
    <string name="download">Download</string>
    <string name="download_mp3">Download MP3</string>
    <string name="download_start">Starting download...</string>
    <string name="download_complete">Download complete</string>
    <string name="view_in_gallery">View in gallery</string>
    <string name="cart">Cart</string>
    <string name="customer_care">Customer Care</string>
    <string name="order_status">Order Status</string>
    <string name="call_us">Call Us</string>
    <string name="ABOUT">ABOUT</string>
    <string name="forum_posts">Forum Posts</string>
    <string name="member_since">Member Since</string>
    <string name="news">NEWS</string>
    <string name="reply">Reply</string>
    <string name="reply_with_quote">Reply with Quote</string>
    <string name="edit_post">Edit Post</string>
    <string name="thanks">Thanks</string>
    <string name="like">Like</string>
    <string name="view_profile">View Profile</string>
    <string name="report">Report</string>
    <string name="mark_read">Mark all as read</string>
    <string name="night_mode_summary">Enable dark theme</string>
    <string name="enter_search">Enter search keywords</string>
    <string name="clear_search_history">Clear history</string>
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="search_empty">Search keywords cannot be empty</string>
    <string name="search_short">Please enter at least 3 characters</string>
    <string name="thread_open_behavior">Thread Open Behavior</string>
    <string name="open_behavior">Go to...</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fullscreen_video">Fullscreen Video</string>
    <string name="fullscreen_summary">Always playback video fullscreen</string>
    <string name="comments">Comments</string>
    <string name="reply_comment">Reply to Comment</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm_title">Delete Comment?</string>
    <string name="delete_confirm_text">Are you sure you want to delete this comment?</string>
    <string name="screen_animations">Screen Transitions</string>
    <string name="image_gallery">View Image Gallery</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="pref_sync_default_value">900000</string>
    <string name="pref_forums_signature_default">Posted via Android Central App</string>
    <string name="pref_open_default_value">unread</string>
    <string name="title_activity_article_comments">COMMENTS</string>
    <string name="title_activity_new_comment">NEW COMMENT</string>
    <string name="title_activity_login">ACCOUNT</string>
    <string name="title_activity_forums_list">FORUMS</string>
    <string name="title_activity_forum_topic">FORUMS</string>
    <string name="title_activity_forum_thread">FORUMS</string>
    <string name="title_activity_new_thread">NEW THREAD</string>
    <string name="title_activity_forum_reply">NEW REPLY</string>
    <string name="title_activity_view_profile">USER PROFILE</string>
    <string name="title_activity_gallery">IMAGE GALLERY</string>
    <string name="title_activity_forum_report">REPORT POST</string>
    <string name="title_activity_forum_search">SEARCH</string>
    <string name="title_activity_forum_search_results">SEARCH RESULTS</string>
</resources>
