<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout android:id="@id/drawer_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="?activity_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:id="@id/forum_pagination_section" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/buttonBarStyle">
            <Button android:textSize="15.0sp" android:textStyle="bold" android:id="@id/forum_comments_first_page" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/first" android:maxLines="1" android:layout_weight="1.0" android:onClick="goToFirst" style="?android:attr/buttonBarButtonStyle" />
            <Button android:textSize="15.0sp" android:textStyle="bold" android:id="@id/forum_comments_prev_page" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prev" android:maxLines="1" android:layout_weight="1.0" android:onClick="goToPrev" style="?android:attr/buttonBarButtonStyle" />
            <Button android:textSize="15.0sp" android:textStyle="bold" android:id="@id/forum_comments_goto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:maxLines="1" android:layout_weight="1.0" android:onClick="goToPage" style="?android:attr/buttonBarButtonStyle" />
            <Button android:textSize="15.0sp" android:textStyle="bold" android:id="@id/forum_comments_next_page" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/next" android:maxLines="1" android:layout_weight="1.0" android:onClick="goToNext" style="?android:attr/buttonBarButtonStyle" />
            <Button android:textSize="15.0sp" android:textStyle="bold" android:id="@id/forum_comments_last_page" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/last" android:maxLines="1" android:layout_weight="1.0" android:onClick="goToLast" style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <ListView android:id="@id/forums_comments_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:listSelector="@*android:color/transparent" android:divider="@null" android:dividerHeight="0.0dip" />
        <ProgressBar android:layout_gravity="center" android:id="@*android:id/empty" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="0.0dip" android:indeterminate="true" android:layout_weight="1.0" style="?android:attr/progressBarStyleLarge" />
    </LinearLayout>
    <ListView android:layout_gravity="start" android:id="@id/menu_list" android:background="@color/menu_background" android:layout_width="240.0dip" android:layout_height="fill_parent" android:divider="@*android:color/black" android:dividerHeight="1.0dip" android:choiceMode="singleChoice" />
</android.support.v4.widget.DrawerLayout>