<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/profile_avatar" android:layout_width="100.0dip" android:layout_height="100.0dip" android:scaleType="centerCrop" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <TextView android:textAppearance="@*android:style/TextAppearance.Large" android:id="@id/profile_name" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/profile_avatar" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/profile_avatar">
        <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:textStyle="bold" android:textColor="?maintext_color" android:gravity="center" android:background="?card_color" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginTop="10.0dip" android:text="@string/ABOUT" />
        <RelativeLayout android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@*android:style/TextAppearance.Medium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forum_posts" android:layout_alignParentLeft="true" />
            <TextView android:textAppearance="@*android:style/TextAppearance.Medium" android:id="@id/profile_post_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <View android:background="@*android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@*android:style/TextAppearance.Medium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/member_since" android:layout_alignParentLeft="true" />
            <TextView android:textAppearance="@*android:style/TextAppearance.Medium" android:id="@id/profile_member_since" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>